/*
Purpose:
  Define clean.events for direct ETL loading from events.csv.

Current scope:
  - drop exact duplicate rows from events.csv
  - keep all analyst-approved event columns
  - fill missing user_id from ip_address when another deduplicated event provides it
  - fill missing city from ip_address when another deduplicated event provides it
  - type timestamps and session_id during ETL loading
  - enforce that any non-null user_id points to an existing clean.users record

TODO:
  - implement deeper event reconciliation and anomaly handling after the notebook-backed pass
*/

CREATE TABLE clean.events (
    event_row_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    etl_source_file TEXT NOT NULL DEFAULT 'events.csv',
    etl_loaded_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    source_event_id BIGINT NOT NULL,
    user_id BIGINT,
    sequence_number INTEGER NOT NULL,
    session_id UUID NOT NULL,
    created_at TIMESTAMPTZ NOT NULL,
    ip_address TEXT,
    city TEXT,
    state TEXT,
    postal_code TEXT,
    browser TEXT,
    traffic_source TEXT,
    uri TEXT,
    event_type TEXT,
    CONSTRAINT fk_clean_events_user_id
        FOREIGN KEY (user_id) REFERENCES clean.users (user_id)
);
