@startuml
left to right direction
hide methods
hide stereotypes
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Clean Layer ERD

entity "clean.users" as users {
  * user_id : BIGINT <<PK>>
  --
  gender : TEXT
  first_name : TEXT
  last_name : TEXT
  email : TEXT
  age : INTEGER
  state : TEXT
  street_address : TEXT
  postal_code : TEXT
  city : TEXT
  country : TEXT
  traffic_source : TEXT
  is_loyal : BOOLEAN
}


entity "clean.orders" as orders {
  * order_id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  status : TEXT
  * created_at : TIMESTAMPTZ
  returned_at : TIMESTAMPTZ
  shipped_at : TIMESTAMPTZ
  delivered_at : TIMESTAMPTZ
  * num_of_item : INTEGER
}

entity "clean.order_items" as order_items {
  * order_item_id : BIGINT <<PK>>
  --
  * order_id : BIGINT <<FK>>
  * user_id : BIGINT <<FK>>
  * product_id : BIGINT
  * inventory_item_id : BIGINT
  * sale_price : NUMERIC
  * cost : NUMERIC
  category : TEXT
  brand : TEXT
  department : TEXT
  sku : TEXT
  * distribution_center_id : BIGINT
  delivery_longitude : DOUBLE PRECISION
  delivery_latitude : DOUBLE PRECISION
  warehouse_name : TEXT
  warehouse_longitude : DOUBLE PRECISION
  warehouse_latitude : DOUBLE PRECISION
  product_name : TEXT
  customer_review : TEXT
}

entity "clean.events" as events {
  * event_row_id : BIGINT <<PK>>
  --
  * source_event_id : BIGINT
  user_id : BIGINT <<FK>> <<nullable>>
  * sequence_number : INTEGER
  * session_id : UUID
  * created_at : TIMESTAMPTZ
  ip_address : TEXT
  city : TEXT
  state : TEXT
  postal_code : TEXT
  browser : TEXT
  traffic_source : TEXT
  uri : TEXT
  event_type : TEXT
}

users ||--o{ orders
users ||--o{ order_items
orders ||--o{ order_items
users |o--o{ events

note bottom of events
  events.user_id is nullable:
  (есть анонимы)
end note

@enduml
